// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`binotype.Context > create(site, /) 1`] = `
{
  "article": {
    "articles": undefined,
    "class": [],
    "content": undefined,
    "id": "",
    "link": "/",
    "meta": {},
    "mode": "list",
    "sections": undefined,
    "subtitle": undefined,
    "title": {
      "formatted": "Not Found",
      "plain": "Not Found",
    },
  },
  "base": "https://example.com",
  "design": {
    "home": {
      "mode": "header",
      "section": "article",
    },
    "icon": "/favicon.ico",
    "list": {
      "mode": "summary",
    },
    "logotype": "/logo.svg",
    "navigation": "header",
    "scripts": [
      "/script.js",
    ],
    "styles": [
      "/style.css",
    ],
  },
  "menu": {
    "depth": undefined,
    "items": [],
  },
  "title": "Test Site",
  "url": "https://example.com/",
}
`;

exports[`binotype.Context > create(site, /about) 1`] = `
{
  "article": {
    "articles": undefined,
    "class": [],
    "content": {
      "attributes": {},
      "children": [
        {
          "text": "About page content",
        },
      ],
      "tag": "p",
    },
    "id": "",
    "link": "/about",
    "meta": {},
    "mode": "list",
    "sections": undefined,
    "subtitle": undefined,
    "title": {
      "formatted": "About",
      "plain": "About",
    },
  },
  "base": "https://example.com",
  "design": {
    "home": {
      "mode": "header",
      "section": "article",
    },
    "icon": "/favicon.ico",
    "list": {
      "mode": "summary",
    },
    "logotype": "/logo.svg",
    "navigation": "header",
    "scripts": [
      "/script.js",
    ],
    "styles": [
      "/style.css",
    ],
  },
  "menu": {
    "depth": undefined,
    "items": [],
  },
  "title": "Test Site",
  "url": "https://example.com/about",
}
`;

exports[`binotype.Context > create(site, /nonexistent) 1`] = `
{
  "article": {
    "articles": undefined,
    "class": [],
    "content": undefined,
    "id": "",
    "link": "/nonexistent",
    "meta": {},
    "mode": "list",
    "sections": undefined,
    "subtitle": undefined,
    "title": {
      "formatted": "Not Found",
      "plain": "Not Found",
    },
  },
  "base": "https://example.com",
  "design": {
    "home": {
      "mode": "header",
      "section": "article",
    },
    "icon": "/favicon.ico",
    "list": {
      "mode": "summary",
    },
    "logotype": "/logo.svg",
    "navigation": "header",
    "scripts": [
      "/script.js",
    ],
    "styles": [
      "/style.css",
    ],
  },
  "menu": {
    "depth": undefined,
    "items": [],
  },
  "title": "Test Site",
  "url": "https://example.com/nonexistent",
}
`;

exports[`binotype.Context > create(site, invalid-path) 1`] = `
{
  "article": {
    "articles": undefined,
    "class": [],
    "content": undefined,
    "id": "",
    "link": "/invalid-path",
    "meta": {},
    "mode": "list",
    "sections": undefined,
    "subtitle": undefined,
    "title": {
      "formatted": "Not Found",
      "plain": "Not Found",
    },
  },
  "base": "https://example.com",
  "design": {
    "home": {
      "mode": "header",
      "section": "article",
    },
    "icon": "/favicon.ico",
    "list": {
      "mode": "summary",
    },
    "logotype": "/logo.svg",
    "navigation": "header",
    "scripts": [
      "/script.js",
    ],
    "styles": [
      "/style.css",
    ],
  },
  "menu": {
    "depth": undefined,
    "items": [],
  },
  "title": "Test Site",
  "url": "https://example.com/invalid-path",
}
`;
